[package]
name = "auther"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "Authentication primitives: Argon2id, TOTP, backup codes, PKCE, JWT. Stateless, audit-friendly, zero unsafe."
repository = "https://github.com/warb-dev1/auther"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["auth", "authentication", "argon2", "jwt", "totp"]
categories = ["authentication", "cryptography"]

[dependencies]
argon2    = "0.5"
base64ct  = { version = "1.6", features = ["alloc"] }
getrandom = "0.2"
hmac      = "0.12"
rand_core = { version = "0.6", features = ["std"] }
sha1      = "0.10"
sha2      = "0.10"
subtle    = "2.5"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
